--- a/wing-chun-lakeland/sifuochwingchun.com/index.html
+++ b/wing-chun-lakeland/sifuochwingchun.com/index.html
@@ -2207,6 +2207,20 @@ var CFFIELD_CONFIG = {"1":{"configs":{"fld_7908577":{"type":"button","id":"fld_7
 	});
 </script>
 
+<script type="text/javascript">
+  (function(d, t) {
+      var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+      v.onload = function() {
+        window.voiceflow.chat.load({
+          verify: { projectID: '65df69b49a75bf571aa64fbd' },
+          url: 'https://general-runtime.voiceflow.com',
+          versionID: 'production'
+        });
+      }
+      v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+  })(document, 'script');
+</script>
+
 </body>
 
 <!-- Mirrored from sifuochwingchun.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 01 Mar 2024 19:42:37 GMT -->
