Moved Chatbot Location

--- a/wing-chun-lakeland/sifuochwingchun.com/index.html
+++ b/wing-chun-lakeland/sifuochwingchun.com/index.html
@@ -2115,7 +2115,20 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 	</footer><!-- #colophon -->
 </div><!-- #page -->
 <div class="book-trial-tag">
-	<span><a href="#trial">Click to get FREE 2 WEEK TRIAL</a></span>
+	<span><a href="#trial">Click to get FREE 2 WEEK TRIAL</a>
+    <script type="text/javascript">
+      (function(d, t) {
+          var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+          v.onload = function() {
+            window.voiceflow.chat.load({
+              verify: { projectID: '65df69b49a75bf571aa64fbd' },
+              url: 'https://general-runtime.voiceflow.com',
+              versionID: 'production'
+            });
+          }
+          v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+      })(document, 'script');
+    </script></span>
 </div>
 <!-- Instagram Feed JS -->
 <script type="text/javascript">
@@ -2207,19 +2220,7 @@ var CFFIELD_CONFIG = {"1":{"configs":{"fld_7908577":{"type":"button","id":"fld_7
 	});
 </script>
 
-<script type="text/javascript">
-  (function(d, t) {
-      var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
-      v.onload = function() {
-        window.voiceflow.chat.load({
-          verify: { projectID: '65df69b49a75bf571aa64fbd' },
-          url: 'https://general-runtime.voiceflow.com',
-          versionID: 'production'
-        });
-      }
-      v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
-  })(document, 'script');
-</script>
+
 
 </body>
 
